# skibidiscript

./: .gitignore  Cargo.toml  README.md  main.json  window.py
examples/: 2.skibidi  apel.skibidi  class.skibidi  dvd.skibidi  function_variable.skibidi  game.skibidi  gamework.skibidi  ghost.skibidi  guess.skibidi  hello.skibidi  if.skibidi  loop_list.skibidi  main.skibidi  quote.skibidi  rising.skibidi  spam.skibidi  window.skibidi
pocgame/: deinition.md  game.py
src/: error.rs  interpreter.rs  lexer.rs  main.rs  p2.rs  parser.rs
src/lib/: mod.rs  nerd.rs
src/libs/: apel.rs  mod.rs  nerd.rs  nerd_struct_test.rs  skui.rs
src/libs/libsv2/: mod.rs  time.rs
src/libs/skui/: clock.rs  mod.rs  utils.rs  window.rs
winit-test/: Cargo.toml
winit-test/src/: main.rs
