[package]
name = "skibidyscript"
version = "0.1.0"
authors = ["robiot"]
license = "GPL-3.0-only"
repository = "https://github.com/robiot/skibbityscript"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.9.3"
pixels = "0.13.0"
rand = "0.8.5"
raw-window-handle = "0.6.2"
winit = { version = "0.30", features = ["rwh_05"] }
